My first commit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My first tailwind css</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
@@ -44,7 +44,7 @@
                 <img src="assets/item_menu (4).png" alt="">
             </div>
             <div class="w-fit min-w-[356px]:ml-[15px] max-w-[640px]">
-                <h1 class="font-sans text-2xl font-medium text-white mt-[340px] max-w-[152px] md:text-[46px] md:mb-[80px]">Насладитесь гармонией арктики</h1>
+                <h1 class="font-sans text-2xl font-medium text-white mt-[61px] max-w-[152px] md:text-[46px] md:mb-[80px]">Насладитесь гармонией арктики</h1>
                 <p class="max-w-[287px] text-white font-light mt-[40px] font-sans md:max-w-[450px]">Мы создали уникальную систему подбора маршрутов, которая учитывает множество скрытых факторов, чтобы насладиться отдыхом сполна.</p>
                 <button class="rounded-[7px] bg-emerald-600 pt-[10px] pl-[32px] pb-[10px] pr-[32px] mt-[28px] md:mt-[80px]">
                     <p class="text-[12px] text-white text-normal">Пройти опрос</p>
@@ -546,10 +546,7 @@
     <section>
         <div class="w-[90%] max-w-[1000px] mx-auto pl-[10px] md:flex flex-row-reverse">
             <div class="flex justify-between w-100 min-[300px]:w-[300px] mx-auto relative md:w-[360px] lg:w-[400px]">
-                <div class="bg-gray-100 opacity-90 p-3 shadow-2xl w-[145px] rounded-[12px] absolute -top-[30px] md:top-[40px] md:-left-[30px]">
-                    <h3 class="text-emerald-600">> 50 000</h3>
-                    <p class="text-[10px] font-medium">ручьев, озер и рек</p>
-                </div> 
+ 
                 <img src="assets/(1).png" alt="" class="md:object-cover md:w-[360px] md:h-[258px] lg:w-[210px]">
                 <img src="assets/(2).png" alt="" class="hidden md:hidden lg:block object-cover object-right-top lg:w-[180px] lg:h-[258px] lg:block">
                 <img src="assets/Rectangle 8 (3).png" alt="" class="md:hidden lg:block object-cover object-right-top lg:w-[180px] lg:h-[258px] lg:hidden">
