--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
             </div>
             <div class="flex items-center hidden md:block relative z-10">
       
-                <div class="w-[205px] h-[294px] bg-white shadow-2xl absolute right-[200px] -top-[50px] p-[20px] z-30 hover:z-50 hover:scale-110 transition-all rounded-[12px] relative"> 
+                <div class="w-[205px] h-[294px] bg-white shadow-2xl absolute right-[200px] -top-[50px] p-[20px] z-30 hover:z-50 hres rounded-[12px] relative"> 
                     <img src="assets/images.png" alt="">
                     <h3 class="text-emerald-600 text-[14px] mt-[24px]">Ресторан «Край земли»</h3>
                     <p class="text-[10px]">г. Салехард</p>
                 </div>
-                <div class="w-[205px] h-[294px] bg-white shadow-2xl absolute right-[50px] -bottom-[50px] p-[20px] z-40 hover:z-50 hover:scale-110 transition-all rounded-[12px]">
+                <div class="w-[205px] h-[294px] bg-white shadow-2xl absolute right-[50px] -bottom-[50px] p-[20px] z-40 hover:z-50 hresg rounded-[12px]">
                     <img src="assets/images (1).png" alt="">
                     <h3 class="text-[14px] text-emerald-600 mt-[24px]">Музей истории Арктики</h3>
                     <p class="text-[10px]">г. Новый Уренгой</p>
